# themis

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
data/processed/v1/: anpd_guias.jsonl  anpd_resolucoes.jsonl  chunks.jsonl  lgpd.jsonl
docs/: ARCHITECTURE.md  DECISIONS.md  SDD.md
docs/decisions/: 0001-langgraph-over-crewai-autogen.md  0002-qdrant-over-pgvector.md  0003-chunking-strategy.md  0004-embedding-model.md  0005-sparse-bm25-over-tsvector.md  template.md
scripts/: probe_anpd_guides.py  probe_retrieval.py  validate_corpus.py
tests/: test_anpd_scraper.py  test_chunker.py  test_embedder.py  test_planalto_scraper.py  test_retrieval.py  test_smoke.py  test_sparse.py
tests/fixtures/: planalto-lgpd-sample.html
